change the width of samanira logo in mobile

--- a/css/media.css
+++ b/css/media.css
@@ -345,6 +345,8 @@
 	.css-code-box,
 	.sample-box{max-height: 250px;}
 
+	.samanira-logo{max-width: 200px;}
+
 }
 
 						/*           430px Screen         */
