--- a/css/media.css
+++ b/css/media.css
@@ -116,17 +116,14 @@
 
 	.input.has-checkbox:last-child{margin-left: 4%;}
 
-	.parallax-layer{padding:40px 20px 0 20px;}
+	.parallax-layer{
+		font-size: 44px;
+		padding:40px 20px 0 20px;
+	}
 
 	.banner,
 	.parallax,
 	.potfolio-banner{background-attachment: scroll !important;}
-
-	#about-me p a{
-		font-family: 'Effra-regular';
-		color:#fefefe;
-		border-bottom: none;
-	}
 
 	.content-text{padding:0 15px !important;}
 
@@ -155,6 +152,25 @@
 	}
 
 	.inner-banner{padding:0 15px;}
+
+	#samanira{
+		position: relative;
+		padding:60px 0 140px 0;
+	}
+
+	#samanira a{
+		position: absolute;
+		bottom:30px;
+		left:50%;
+		margin-left: -100px;
+	}
+
+	.half-box{
+		float: none;
+		width: 100%;
+		text-align: center !important;
+		padding:0;
+	}
 
 }
 
@@ -357,6 +373,29 @@
 		margin:5px 0 0 10px;
 	}
 
+	body{font-size: 16px;}
+
+	#about-me{padding-bottom: 350px;}
+
+	.saman{
+		width: 150px;
+		margin-left: -75px;
+	}
+
+	.pagination-content{height: 250px;}
+
+	.social-icon{margin:0 2px;}
+
+	.contact-info{padding:10px 15px;}
+
+	#samanira a{
+		left:15px;
+		width: calc(100% - 30px);
+		margin-left: 0;
+	}
+
+	.stat-box strong{font-size: 33px;}
+
 }
 
 						/*           430px Screen         */
@@ -365,7 +404,7 @@
 
 	.button-holder .bttn{margin: 10px;}
 
-	.parallax-layer{font-size: 40px;}
+	.parallax-layer{font-size: 37px;}
 
 	.pagination-item{margin-left: -160px;}
 
