--- a/css/saman.css
+++ b/css/saman.css
@@ -478,7 +478,7 @@ body:after {
 	height: 32px;
 	padding: 0;
 	line-height: 32px;
-	background: #161616;
+	background: #0a9abd;
 	border-radius: 50%;
 	margin: 0 13px;
 	border: none;
@@ -510,7 +510,7 @@ body:after {
 	margin-left: -200px;
 	font-size: 0;
 	border-radius: 5px;
-	border: 7px solid #161616;
+	border: 7px solid #282828;
 }
 
 .pagination-item img {
