added version and fixed some items in samanira page

--- a/css/style.css
+++ b/css/style.css
@@ -877,3 +877,8 @@ code{font-size: 15px;}
 
 .samanira-socials a:hover{opacity: .7;}
 
+.current-version{
+	margin-top: -20px;
+    margin-bottom: 30px;
+}
+
