fixed all issues from year 2017

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,23 +1,1 @@
-@font-face{
-	font-family:'Effra-regular';
-	src: url('../fonts/Effra-regular.eot');
-	src: url('../fonts/Effra-regular.eot?#iefix') format('embedded-opentype'),
-		 url('../fonts/Effra-regular.ttf') format('truetype'),
-		 url('../fonts/Effra-regular.otf') format('otf'),
-		 url('../fonts/Effra-regular.svg') format('svg'),
-		 url('../fonts/Effra-regular.woff') format('woff');
-	font-weight: normal;
-  	font-style: normal;
-}
-
-@font-face{
-	font-family:'Effra-light';
-	src: url('../fonts/Effra-light.eot');
-	src: url('../fonts/Effra-light.eot?#iefix') format('embedded-opentype'),
-		 url('../fonts/Effra-light.ttf') format('truetype'),
-		 url('../fonts/Effra-light.otf') format('otf'),
-		 url('../fonts/Effra-light.svg') format('svg'),
-		 url('../fonts/Effra-light.woff') format('woff');
-	font-weight: normal;
-  	font-style: normal;
-}
+@font-face{font-family:Effra-regular;src:url(../fonts/Effra-regular.eot);src:url(../fonts/Effra-regular.eot?#iefix) format('embedded-opentype'),url(../fonts/Effra-regular.ttf) format('truetype'),url(../fonts/Effra-regular.otf) format('otf'),url(../fonts/Effra-regular.svg) format('svg'),url(../fonts/Effra-regular.woff) format('woff');font-weight:400;font-style:normal}@font-face{font-family:Effra-light;src:url(../fonts/Effra-light.eot);src:url(../fonts/Effra-light.eot?#iefix) format('embedded-opentype'),url(../fonts/Effra-light.ttf) format('truetype'),url(../fonts/Effra-light.otf) format('otf'),url(../fonts/Effra-light.svg) format('svg'),url(../fonts/Effra-light.woff) format('woff');font-weight:400;font-style:normal}
