--- a/css/ie.css
+++ b/css/ie.css
@@ -1,37 +1,1 @@
-@charset "utf-8";
-/*============PIE================================*/
-.openCloseBtn,
-span.select-esa,
-.file-holder,
-.button,
-.loginSumit,
-.field1,
-.logSocial,
-.spUserTbl,
-.error,
-.success,
-.ftrForm .submit,
-.box2 .submit,
-.commentInBtm .submit,
-.ftrForm .text,
-.headerForm .form-packet,
-a.tabTopBtn,
-a.noneBlockBtn,
-a.btn3,
-a.btn,
-.innerMidTop,
-.innerTags li a,
-.innerTable,
-.tabDetails,
-.tabing li a,
-.pagination a,
-ul.breadcomb,
-.progress,
-.progress-bar,
-ul.box2MidMid,
-ul.list li a span,
-.box2,
-.box,
-.slider,
-.navigation li a,
-#header{behavior:url(css/PIE-1.0.0/PIE.htc)}
+@charset "utf-8";#header,.box,.box2,.box2 .submit,.button,.commentInBtm .submit,.error,.field1,.file-holder,.ftrForm .submit,.ftrForm .text,.headerForm .form-packet,.innerMidTop,.innerTable,.innerTags li a,.logSocial,.loginSumit,.navigation li a,.openCloseBtn,.pagination a,.progress,.progress-bar,.slider,.spUserTbl,.success,.tabDetails,.tabing li a,a.btn,a.btn3,a.noneBlockBtn,a.tabTopBtn,span.select-esa,ul.box2MidMid,ul.breadcomb,ul.list li a span{behavior:url(css/PIE-1.0.0/PIE.htc)}
