--- a/vue/public/css/style.css
+++ b/vue/public/css/style.css
@@ -196,6 +196,8 @@
 	z-index: 2;
 }
 
+.section-title h1{text-transform: uppercase;}
+
 .section-title span{
 	display: block;
 	font-family: 'Effra-light';
@@ -679,158 +681,3 @@
 	padding:6px 10px;
 	margin:10px 0;
 }
-
-.samanira{padding:80px 0 120px 0;}
-
-.samanira h4{
-	font-size: 35px;
-	margin-top:50px;
-}
-.samanira h4 strong{color:#0a9abd;}
-.samanira h5{
-	font-size: 26px;
-	color:#f55757;
-	margin-top:35px;
-	cursor: pointer;
-}
-.samanira h5::after{
-	content:'+';
-	display: inline-block;
-	vertical-align: top;
-	width: 20px;
-	height: 20px;
-	line-height: 20px;
-	font-family: 'Effra-light';
-	font-size: 21px;
-	color:#ffffff;
-	text-align: center;
-	margin:6px 0 0 10px;
-	background-color: #f55757;
-	border-radius: 2px;
-	-webkit-transition:all .2s ease-in-out;
-	-moz-transition:all .2s ease-in-out;
-	transition:all .2s ease-in-out;
-}
-.samanira h5.active::after{content:'-';}
-
-.samanira h6{
-	font-size: 21px;
-	color:#0a9abd;
-	margin-top:30px;
-}
-.samanira p{
-	font-family: 'Effra-light';
-	color:#dadada;
-	padding-top:20px;
-}
-
-.samanira p strong{font-family: 'Effra-light';}
-.samanira-ul li a,
-.samanira-ol li a,
-.samanira p a{color:#f55757;}
-
-.samanira-ul li a:hover,
-.samanira-ol li a:hover,
-.samanira p a:hover{border-bottom: 1px solid #f55757;}
-
-.samanira-ul,
-.samanira-ol{margin-top:20px;}
-.samanira-ul li::before{
-	content:'';
-	display: inline-block;
-	vertical-align: middle;
-	width: 8px;
-	height: 8px;
-	margin: -3px 12px 0 5px;
-	background-color: #dadada;
-	border-radius: 100%;
-}
-
-.samanira-ol li::before{
-	content:attr(li-number);
-	display: inline-block;
-	vertical-align: middle;
-	font-family: 'Effra-light';
-	color:#dadada;
-	margin: -4px 8px 0 5px;
-}
-
-.samanira-ul li,
-.samanira-ol li{
-	font-family: 'Effra-light';
-	color:#dadada;
-	margin:10px 0;
-}
-
-.samanira img{
-	display: block;
-	margin:15px 0;
-	border-radius: 4px;
-}
-
-.css-code-box{
-	max-width: 500px;
-	max-height: 400px;
-	overflow-y: auto;
-	font-size: 18px;
-	color:#232323;
-	padding:0 20px;
-	margin-top:20px;
-	background: #f3f3f3;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 10px 35px #a3a3a3;
-    -moz-box-shadow: inset 0 10px 35px #a3a3a3;
-    box-shadow: inset 0 10px 35px #a3a3a3;
-}
-
-code{font-size: 15px;}
-
-.selector{color:#0a9abd;}
-.code-item{color:#f55757;}
-.code-item-2{color:#61bd61;}
-
-.sample-box{
-	position: relative;
-	max-width: 500px;
-	min-height: 80px;
-	max-height: 400px;
-	overflow-y: auto;
-	font-size: 18px;
-	color:#232323;
-	padding:20px;
-	margin-top:20px;
-	background: #4f4f4f;
-    border-radius: 4px;
-}
-
-.sample-box strong{font-family: 'Effra-light';}
-
-.samanira .class-inner-box{display: none;}
-
-.in-samanira-buttons a.bttn{
-	min-width: 185px !important;
-	margin:0 5px !important;
-	border:2px solid #ffffff;
-}
-
-.in-samanira-buttons a.bttn:hover{
-	color:#ffffff !important;
-	background-color: #0a9abd !important;
-}
-
-.samanira-socials img{
-	display: inline-block;
-	vertical-align: middle;
-	width: 50px;
-	margin:20px 20px 0 0;
-}
-
-.samanira-socials a:last-child img{width: 53px;}
-
-.samanira-socials a:hover{opacity: .7;}
-
-.current-version{
-	margin-top: -20px;
-    margin-bottom: 30px;
-}
-
