--- a/vue/public/css/style.css
+++ b/vue/public/css/style.css
@@ -402,12 +402,21 @@
 	position: absolute;
 	top:0;
 	left:0;
-	display: none;
+	visibility: hidden;
+	opacity: 0;
 	width: 100%;
 	height: 100%;
 	color:#ffffff;
-	background: rgba(0,0,0, .9);
+	background: rgba(0,0,0, .95);
 	z-index: 999;
+	-webkit-transition:all .5s ease-in-out;
+	-moz-transition:all .5s ease-in-out;
+	transition:all .5s ease-in-out;
+}
+
+.thank-you.active{
+	opacity: 1;
+	visibility: visible;
 }
 
 .thank-you-box{
