--- a/vue/public/css/media.css
+++ b/vue/public/css/media.css
@@ -245,13 +245,13 @@
 	.parallax{height: 300px;}
 	.parallax-layer{padding-top:20px;}
 
-	.potfolio-banner{height: 500px;}
+	.potfolio-banner{height: 500px !important;}
 
 	.Arrow{display: none;}
 	.button-holder .Arrow{display: block;}
 
-	.potfolio-banner h1{font-size: 50px;}
-	.potfolio-banner h1 span{font-size: 27px;}
+	.potfolio-banner h1{font-size: 48px !important;}
+	.potfolio-banner h1 span{font-size: 27px !important;}
 
 }
 
@@ -265,7 +265,8 @@
 	h4{font-size:24px;}
 	h5{font-size:22px;}
 	h6{font-size:19px;}
-	p{padding-top:20px;}
+	p{padding-top:20px !important;}
+	#about-me p{padding-top:30px !important;}
 
 	.parallax-layer{font-size: 45px;}
 	.section-title span{font-size: 19px;}
@@ -318,16 +319,16 @@
 		margin:10px auto;
 	}
 
-	.portfolio-content{padding-top:80px;}
+	.portfolio-content{padding-top:80px !important;}
 
 	.content-image{
-		float: none;
-		width: 100%;
+		float: none !important;
+		width: 100% !important;
 		text-align: center;
 	}
 
 	.content-text{
-		width: 70%;
+		width: 100% !important;
 		padding:50px 0 0 0 !important;
 	}
 
@@ -371,8 +372,6 @@
 		margin-left: -75px;
 	}
 
-	.pagination-content{height: 250px;}
-
 	.social-icon{margin:0 4px !important;}
 
 	.contact-info{padding:10px 15px;}
@@ -387,6 +386,10 @@
 
 	input[type=submit]{margin-top:0;}
 
+	.portfolio-content .button-holder:not(.has-arrow-button){margin-top:40px !important;}
+
+	.pagination{margin-top:40px;}
+
 }
 
 						/*           430px Screen         */
@@ -398,5 +401,12 @@
 	.parallax-layer{font-size: 37px;}
 
 	.pagination-item{margin-left: -160px;}
+
+	.pagination-content{height: 250px;}
+
+	#about-me{padding-bottom:320px;}
+
+	.stat-box-wrapper{padding-top:30px;}
+	
 
 }
