--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -18,7 +18,8 @@
 	display: table;
 	width: 100%;
 	height: 100%;
-	background: url('../images/banner.jpg') no-repeat center center;
+	background-repeat: no-repeat;
+	background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
 }
