fixed some content and issues

--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -49,6 +49,10 @@
 		bottom:0;
 	}
 
+	#samanira .half-box.left-aligned{
+		padding-top:15px;
+	}
+
 }
 
 						/*            1050px Screen         */
