--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -64,7 +64,7 @@
 	.inner-banner{padding: 0 20px 50px 20px;}
 
 	.has-shape::before{
-		top:-50px;
+		top:-49px;
 		height: 50px;
 		background-position: center bottom !important;
 	}
@@ -312,6 +312,10 @@
 		height: 50px;
 	}
 
+	.parallax-layer strong{
+		font-size: 32px;
+	}
+
 	.pagination{margin-top:40px;}
 
 	.has-slime-2::after {
@@ -323,7 +327,11 @@
 	.stat-box{
 		float: none;
 		width: 100%;
-		padding:25px 0;
+		padding:10px 0;
+	}
+
+	.stat-box-info{
+		margin-top:-20px;
 	}
 
 	.page h1{font-size: 100px;}
