--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -217,7 +217,6 @@
 .parallax-box{
 	max-width: 980px;
 	overflow: hidden;
-	padding:0 20px;
 	margin:auto;
 }
 
@@ -302,8 +301,9 @@
 
 .skill-box{
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
-	padding:40px 0;
+	padding:80px 0 40px 0;
 }
 
 .skill{
@@ -311,7 +311,8 @@
 }
 
 .skill img{
-	width:60px;
+	max-width: 120px;
+	height: 60px;
 }
 
 .stat-box strong{
