--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8,7 +8,7 @@
 
 #Home{
 	width: 100%;
-	height: 640px;
+	height: 500px;
 	overflow: hidden;
 }
 
@@ -251,7 +251,7 @@
 
 .saman{
 	padding-right: 20px;
-	margin-bottom: -10px;
+	margin-bottom: -30px;
 }
 
 #statistics{
@@ -406,8 +406,8 @@
 
 .contact-info{
 	text-align: center;
-	padding:20px 35px;
-	margin:40px auto 0 auto;
+	padding:20px 20px 0 20px;
+	margin:0 auto;
 }
 
 .contact-info strong{display: inline-block;}
